--- a/04_livrable/website/punr/index.html
+++ b/04_livrable/website/punr/index.html
@@ -36,13 +36,70 @@
                         <li><a href="punr_ch13.html">Du réalisme à la réalité</a></li>
                      </ol>
                   </li>
-                  <li><a href="database.html">Illustration de la base de données</a></li>
-                  <li><a href="timeline.html">Chronologie</a></li>
+                  <li style="width:200px; height:100px; padding-top:9px;flex-shrink: 0;">Commentaires thématiques
+                     					
+                     <ol class="chapter_nav" style="list-style:none;">
+                        <li><a href="database.html">Illustration de la base de données</a></li>
+                        <li><a href="timeline.html">Chronologie</a></li>
+                        <li><a href="index.html">Index des notions adverses et des expressions préférées</a></li>
+                     </ol>
+                  </li>
                </ul>
             </nav>
             <div class="legals"><a href="https://github.com/mevel-a/ednitl_m2_memoire" target="blanck" style="grid-column:1;"><img src="img/GitHub-Mark-32px.png"></a><a rel="license" href="http://creativecommons.org/licenses/by/4.0/" target="blanck" style="grid-column:2;"><img alt="Licence Creative Commons" src="https://creativecommons.org/images/chooser/chooser_cc.png"></a><a rel="license" href="http://creativecommons.org/licenses/by/4.0/" target="blanck" style="grid-column:3;"><img alt="Licence Creative Commons" src="https://creativecommons.org/images/chooser/chooser_by.png"></a><a href="files/punr.xml" download="" style="grid-column:3; grid-row:2;"><img src="img/logo_xml.png" alt="XML"></a><button class="darkbutton" onclick="darkmode();" style="grid-column:1; grid-row:2;"><img src="img/sun_icon.png" class="sun"></button></div>
          </div>
       </header>
+      <article class="index">
+         <section class="intro">intro goes here</section>
+         <div class="separ"></div>
+         <section class="index bad">
+            <h2>Index des notions adverses</h2>
+            <ul>
+               <li>«&nbsp;grand public&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch01.html#page_7">7</a>]</span></li>
+               <li>«&nbsp;difficile&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch01.html#page_7">7</a>]</span></li>
+               <li>«&nbsp;manifeste&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch01.html#page_7">7</a>]</span></li>
+               <li>«&nbsp;école&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch01.html#page_8">8</a>]</span></li>
+               <li>«&nbsp;École du regard&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch01.html#page_8">8</a>]</span></li>
+               <li>«&nbsp;Roman objectif&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch01.html#page_8">8</a>]</span></li>
+               <li>«&nbsp;École de Minuit&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch01.html#page_8">8</a>]</span></li>
+               <li>«&nbsp;génie&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch01.html#page_10">10</a>]</span></li>
+               <li>«&nbsp;messages&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch01.html#page_10">10</a>]</span></li>
+               <li>«&nbsp;Expliquez-nous donc pourquoi vous avez écrit ce livre, ce qu’il signifie, ce que
+                  vous vouliez faire, dans quelle intention vous avez employé ce mot, construit cette
+                  phrase de telle manière&nbsp;?&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch01.html#page_13">13</a>]</span></li>
+               <li>«&nbsp;intelligence&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch01.html#page_13">13</a>]</span></li>
+               <li>«&nbsp;bon&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch02.html#page_16">16</a>]</span></li>
+               <li>«&nbsp;cœur&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch02.html#page_17">17</a>]</span></li>
+               <li>«&nbsp;austère&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch02.html#page_20">20</a>]</span></li>
+               <li>«&nbsp;calme&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch02.html#page_20">20</a>]</span></li>
+               <li>«&nbsp;C’est de la littérature&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch02.html#page_20">20</a>]</span></li>
+               <li>«&nbsp;significations&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch02.html#page_22">22</a>]</span></li>
+               <li>«&nbsp;le cœur romantique des choses&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch02.html#page_23">23</a>]</span></li>
+               <li>«&nbsp;Pourquoi maintenant&nbsp;?&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch02.html#page_25">25</a>]</span></li>
+               <li>«&nbsp;profondeur&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch02.html#page_25">25</a>]</span></li>
+               <li>«&nbsp;condition&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch02.html#page_26">26</a>]</span></li>
+               <li>«&nbsp;nature&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch02.html#page_26">26</a>]</span></li>
+               <li>«&nbsp;au-delà&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch02.html#page_26">26</a>]</span></li>
+            </ul>
+         </section>
+         <section class="index">
+            <h2>Index des expressions préférées</h2>
+            <ul>
+               <li>nouvelle<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch02.html#page_16">16</a>]</span></li>
+               <li>liberté<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch02.html#page_20">20</a>]</span></li>
+               <li>est<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch02.html#page_20">20</a>]</span></li>
+               <li>sont là.<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch02.html#page_21">21</a>]</span></li>
+               <li>voit<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch02.html#page_21">21</a>]</span></li>
+               <li>réalité.<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch02.html#page_22">22</a>]</span></li>
+               <li>inhabituel<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch02.html#page_22">22</a>]</span></li>
+               <li>présence<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch02.html#page_22">22</a>]</span></li>
+               <li>là<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch02.html#page_22">22</a>]</span></li>
+               <li>quelque chose<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch02.html#page_22">22</a>]</span></li>
+               <li>ailleurs<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch02.html#page_23">23</a>]</span></li>
+               <li>vrai.<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch02.html#page_24">24</a>]</span></li>
+            </ul>
+         </section>
+      </article>
       <footer><a href="https://www.univ-lille.fr/" target="blanck"><img src="img/logo_u_lille.png" alt="logo université de lille"></a></footer>
    </body>
 </html>
