--- a/04_livrable/website/punr/punr_ch02.html
+++ b/04_livrable/website/punr/punr_ch02.html
@@ -36,8 +36,14 @@
                         <li><a href="punr_ch13.html">Du réalisme à la réalité</a></li>
                      </ol>
                   </li>
-                  <li><a href="database.html">Illustration de la base de données</a></li>
-                  <li><a href="timeline.html">Chronologie</a></li>
+                  <li style="width:200px; height:100px; padding-top:9px;flex-shrink: 0;">Commentaires thématiques
+                     					
+                     <ol class="chapter_nav" style="list-style:none;">
+                        <li><a href="database.html">Illustration de la base de données</a></li>
+                        <li><a href="timeline.html">Chronologie</a></li>
+                        <li><a href="index.html">Index des notions adverses et des expressions préférées</a></li>
+                     </ol>
+                  </li>
                </ul>
             </nav>
             <div class="legals"><a href="https://github.com/mevel-a/ednitl_m2_memoire" target="blanck" style="grid-column:1;"><img src="img/GitHub-Mark-32px.png"></a><a rel="license" href="http://creativecommons.org/licenses/by/4.0/" target="blanck" style="grid-column:2;"><img alt="Licence Creative Commons" src="https://creativecommons.org/images/chooser/chooser_cc.png"></a><a rel="license" href="http://creativecommons.org/licenses/by/4.0/" target="blanck" style="grid-column:3;"><img alt="Licence Creative Commons" src="https://creativecommons.org/images/chooser/chooser_by.png"></a><a href="files/punr.xml" download="" style="grid-column:3; grid-row:2;"><img src="img/logo_xml.png" alt="XML"></a><button class="darkbutton" onclick="darkmode();" style="grid-column:1; grid-row:2;"><img src="img/sun_icon.png" class="sun"></button></div>
@@ -52,20 +58,20 @@
                <summary>Introduction</summary>
             </details>
             <div class="smallgap"></div>
-            <h3 id="d1e504"><span id="page_16" class="STDgray STDsmall pb">[16]</span>Une voie pour le roman futur<br><span class="STDsmall">(1956)</span></h3>
+            <h3 id="d1e508"><span id="page_16" class="STDgray STDsmall pb">[16]</span>Une voie pour le roman futur<br><span class="STDsmall">(1956)</span></h3>
             <p class="first">Il ne semble guère raisonnable, à première vue, de penser qu’une littérature entièrement
                <span class="STDitalic">nouvelle</span> soit un jour&nbsp;–&nbsp;maintenant, par exemple&nbsp;–&nbsp;possible. Les nombreuses tentatives, qui
                se sont succédé depuis plus de trente ans, pour faire sortir le récit de ses ornières
                n’ont abouti, au mieux, qu’à des œuvres isolées. Et –&nbsp;on nous le répète&nbsp;–&nbsp;aucune de
                ces œuvres, quel qu’en fût l’intérêt, n’a emporté l’adhésion d’un public comparable
                à celui du roman bourgeois. La seule conception romanesque qui ait cours aujourd’hui
-               est, en fait, celle de <span class="ref">Balzac<span class="refinfo">author, <span class="Ref9"></span>, <span class="Axi"></span>.</span></span>.</p>
+               est, en fait, celle de <span class="ref">Balzac<span class="refinfo">author, <span class="Ref1">mention</span>, <span class="Axi0">blâme</span>.</span></span>.</p>
             <p>Sans mal on pourrait même remonter jusqu’à <span class="ref">madame de La Fayette<span class="refinfo">author, <span class="Ref1">mention</span>, <span class="Axi0">blâme</span>.</span></span>. La sacro-sainte analyse psychologique constituait, déjà à cette époque, la base
                de toute prose&nbsp;: c’est elle qui présidait à la conception du livre, à la peinture
-               des personnages, au déroulement de l’intrigue. Un <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;bon&nbsp;»</span> roman, depuis lors, est resté l’étude d’une passion&nbsp;–&nbsp;ou d’un conflit de passions,
+               des personnages, au déroulement de l’intrigue. Un «&nbsp;bon&nbsp;» roman, depuis lors, est resté l’étude d’une passion&nbsp;–&nbsp;ou d’un conflit de passions,
                ou d’une absence de passion&nbsp;–&nbsp;dans un milieu <span id="page_17" class="STDgray STDsmall pb">[17]</span>donné. La plupart de nos romanciers contemporains du type traditionnel&nbsp;–&nbsp;c’est-à-dire
                ceux qui justement recueillent l’approbation des consommateurs&nbsp;–&nbsp;pourraient recopier
-               de longs passages de <span class="STDitalic"><span class="ref">La Princesse de Clèves<span class="refinfo">œuvre, <span class="Ref1">mention</span>, <span class="Axi0">blâme</span>.</span></span></span> ou du <span class="STDitalic"><span class="ref">Père Goriot<span class="refinfo">œuvre, <span class="Ref9"></span>, <span class="Axi"></span>.</span></span></span> sans éveiller les soupçons du vaste public qui dévore leur production. À peine y
+               de longs passages de <span class="STDitalic"><span class="ref">La Princesse de Clèves<span class="refinfo">œuvre, <span class="Ref1">mention</span>, <span class="Axi0">blâme</span>.</span></span></span> ou du <span class="STDitalic"><span class="ref">Père Goriot<span class="refinfo">œuvre, <span class="Ref1">mention</span>, <span class="Axi0">blâme</span>.</span></span></span> sans éveiller les soupçons du vaste public qui dévore leur production. À peine y
                faudrait-il changer quelque tournure, ou briser certaines constructions, donner çà
                et là le ton particulier de chacun au moyen d’un mot, d’une image hardie, d’une chute
                de phrase... Mais tous avouent, sans voir là rien d’anormal, que leurs préoccupations
@@ -75,7 +81,7 @@
                peu à peu, si les techniques industrielles ont fait des progrès considérables, notre
                civilisation mentale, elle, est bien restée la même. Nous vivons pratiquement sur
                les mêmes habitudes et les mêmes interdits, moraux, alimentaires, religieux, sexuels,
-               hygiéniques, familiaux, etc. Enfin, il y a le <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;cœur&nbsp;»</span> humain qui&nbsp;–&nbsp;c’est bien connu&nbsp;–&nbsp;est éternel. Tout est dit et l’on vient trop tard,
+               hygiéniques, familiaux, etc. Enfin, il y a le «&nbsp;cœur&nbsp;» humain qui&nbsp;–&nbsp;c’est bien connu&nbsp;–&nbsp;est éternel. Tout est dit et l’on vient trop tard,
                etc., etc.</p>
             <p>Le risque de telles rebuffades s’accroît encore si l’on ose prétendre que cette littérature
                nouvelle, non seulement est désormais possible, mais est en train déjà de voir le
@@ -99,7 +105,7 @@
                prêts à reconnaître la valeur d’une recherche, restent malgré tout les héritiers d’une
                tradition. Or, inconsciemment jugée par référence aux formes consacrées, une forme
                nouvelle paraîtra toujours plus ou moins une absence de forme. Ne lit-on pas, dans
-               un de nos plus célèbres dictionnaires encyclopédiques, à l’article <span class="ref">Schönberg<span class="refinfo">author, <span class="Ref9"></span>, <span class="Axi"></span>.</span></span>&nbsp;: <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;Auteur d’œuvres audacieuses, sans souci d’aucune règle&nbsp;»</span>&nbsp;! Ce bref jugement se trouve sous la rubrique <span class="STDitalic">Musique</span>, évidemment rédigée par un spécialiste.</p>
+               <span class="ref">un de nos plus célèbres dictionnaires encyclopédiques<span class="refinfo">œuvre, <span class="Ref3">emprunt non déclaré fortement suggéré</span>, <span class="Axi0">blâme</span>.</span></span>, à l’article <span class="ref">Schönberg<span class="refinfo">author, <span class="Ref1">mention</span>, <span class="Axi1">indifférent</span>.</span></span>&nbsp;: <span class="quote" onclick="displayExtract('toDefine','1','0',1);">«&nbsp;Auteur d’œuvres audacieuses, sans souci d’aucune règle&nbsp;»</span>&nbsp;! Ce bref jugement se trouve sous la rubrique <span class="STDitalic">Musique</span>, évidemment rédigée par un spécialiste.</p>
             <p><span id="page_19" class="STDgray STDsmall pb">[19]</span>Le nouveau-né balbutiant sera toujours considéré comme un monstre, même par ceux que
                l’expérience passionne. Il y aura de la curiosité, des mouvements d’intérêt, des réserves
                quant à l’avenir. Parmi les louanges sincères, la plupart s’adresseront aux vestiges
@@ -113,8 +119,8 @@
                sembleront s’épanouir au contraire, plus vigoureux que jamais, dans l’ouvrage où il
                pensait leur porter un coup décisif&nbsp;; et on le félicitera, bien entendu, avec soulagement,
                de les avoir cultivés avec tant de zèle.</p>
-            <p>Ainsi les spécialistes du roman (romanciers ou critiques, ou lecteurs trop assidus)
-               seront sans doute ceux qui éprouveront les plus grandes peines à se dégager de l’ornière.</p>
+            <p>Ainsi <span class="ref">les spécialistes du roman<span class="refinfo">entite_collective, <span class="Ref3">emprunt non déclaré fortement suggéré</span>, <span class="Axi0">blâme</span>.</span></span> (romanciers ou critiques, ou lecteurs trop assidus) seront sans doute ceux qui éprouveront
+               les plus grandes peines à se dégager de l’ornière.</p>
             <div class="smallgap"></div>
             <p>Déjà l’observateur le moins conditionné ne parvient pas à voir le monde qui l’entoure
                avec des yeux libres. Précisons tout de suite qu’il ne s’agit pas, ici, du naïf souci
@@ -125,8 +131,8 @@
                s’ajouter aux choses, leur donnant un aspect moins étranger, plus compréhensible,
                plus rassurant. Parfois le camouflage est complet&nbsp;: un geste s’efface de notre esprit
                au profit des émotions supposées qui lui auraient donné naissance, nous retenons qu’un
-               paysage est <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;austère&nbsp;»</span> ou <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;calme&nbsp;»</span> sans pouvoir en citer aucune ligne, aucun des éléments principaux. Même si nous pensons
-               aussitôt&nbsp;: <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;C’est de la littérature&nbsp;»</span>, nous n’essayons pas de nous révolter. Nous sommes habitués à ce que cette littérature
+               paysage est «&nbsp;austère&nbsp;» ou «&nbsp;calme&nbsp;» sans pouvoir en citer aucune ligne, aucun des éléments principaux. Même si nous pensons
+               aussitôt&nbsp;: «&nbsp;C’est de la littérature&nbsp;», nous n’essayons pas de nous révolter. Nous sommes habitués à ce que cette littérature
                (le mot est devenu péjoratif) fonctionne comme une grille, munie de verres diversement
                colorés, qui décompose notre champ de perception en petits carreaux assimilables.</p>
             <p>Et si quelque chose résiste à cette appropriation systématique, si un élément du monde
@@ -168,7 +174,7 @@
                de ce monde reproduit nous révèle, en même temps, le caractère <span class="STDitalic">inhabituel</span> du monde qui nous entoure&nbsp;: inhabituel, lui aussi, dans la mesure où il refuse de
                se plier à nos habitudes d’appréhension et à notre ordre.</p>
             <div class="smallgap"></div>
-            <p>À la place de cet univers des <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;significations&nbsp;»</span> (psychologiques, sociales, fonctionnelles), il faudrait donc essayer de construire
+            <p>À la place de cet univers des «&nbsp;significations&nbsp;» (psychologiques, sociales, fonctionnelles), il faudrait donc essayer de construire
                un monde plus solide, plus immédiat. Que ce soit d’abord par leur <span class="STDitalic">présence</span> que les objets et les gestes s’imposent, et que cette présence continue ensuite à
                dominer, par-dessus toute théorie explicative qui tenterait de les enfermer dans un
                quelconque système de référence, sentimental, sociologique, freudien, métaphysique,
@@ -180,7 +186,7 @@
                rejeter cet auxiliaire gênant dans l’oubli, dans les ténèbres.</p>
             <p>Désormais, au contraire, les objets peu à peu perdront leur inconstance et leurs secrets,
                renonceront à leur faux mystère, à cette intériorité suspecte qu’un essayiste a nommée
-               <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;le cœur romantique des choses&nbsp;»</span>. Celles-ci ne seront plus le vague reflet de l’âme vague du héros, l’image de ses
+               <span class="quote" onclick="displayExtract('toDefine','0','0',1);">«&nbsp;le cœur romantique des choses&nbsp;»</span>. Celles-ci ne seront plus le vague reflet de l’âme vague du héros, l’image de ses
                tourments, l’ombre de ses désirs. Ou plutôt, s’il arrive encore aux choses de servir
                un instant de support aux passions humaines, ce ne sera que temporairement, et elles
                n’accepteront la tyrannie des significations qu’en apparence –&nbsp;comme par dérision&nbsp;–&nbsp;pour
@@ -217,10 +223,10 @@
             <p>Tout cela semblerait peut-être bien théorique, bien illusoire, si précisément quelque
                chose n’était en train de changer&nbsp;–&nbsp;et même d’une façon totale, sans doute définitive&nbsp;–&nbsp;dans
                les rapports que nous entretenons avec l’univers. Aussi entrevoyons-nous la réponse
-               à cette question pleine d’ironie&nbsp;: <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;Pourquoi maintenant&nbsp;?&nbsp;»</span> Il y a aujourd’hui, en effet, un élément nouveau, qui nous sépare cette fois radicalement
-               de <span class="ref">Balzac<span class="refinfo">author, <span class="Ref9"></span>, <span class="Axi"></span>.</span></span>, comme de <span class="ref">Gide<span class="refinfo">author, <span class="Ref9"></span>, <span class="Axi"></span>.</span></span> ou de <span class="ref">madame&nbsp;de&nbsp;La&nbsp;Fayette<span class="refinfo">author, <span class="Ref1">mention</span>, <span class="Axi0">blâme</span>.</span></span>&nbsp;: c’est la destitution des vieux mythes de la <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;profondeur&nbsp;»</span>.</p>
+               à cette question pleine d’ironie&nbsp;: «&nbsp;Pourquoi maintenant&nbsp;?&nbsp;» Il y a aujourd’hui, en effet, un élément nouveau, qui nous sépare cette fois radicalement
+               de <span class="ref">Balzac<span class="refinfo">author, <span class="Ref1">mention</span>, <span class="Axi0">blâme</span>.</span></span>, comme de <span class="ref">Gide<span class="refinfo">author, <span class="Ref1">mention</span>, <span class="Axi0">blâme</span>.</span></span> ou de <span class="ref">madame&nbsp;de&nbsp;La&nbsp;Fayette<span class="refinfo">author, <span class="Ref1">mention</span>, <span class="Axi0">blâme</span>.</span></span>&nbsp;: c’est la destitution des vieux mythes de la «&nbsp;profondeur&nbsp;».</p>
             <p>On sait que toute la littérature romanesque reposait sur eux, sur eux seuls. Le rôle
-               de l’écrivain consistait traditionnellement à creuser dans la <span class="ref">Nature<span class="refinfo">concept, <span class="Ref9"></span>, <span class="Axi"></span>.</span></span>, à l’approfondir, pour atteindre des couches de plus en plus intimes et finir par
+               de l’écrivain consistait traditionnellement à creuser dans la <span class="ref">Nature<span class="refinfo">concept, <span class="Ref1">mention</span>, <span class="Axi0">blâme</span>.</span></span>, à l’approfondir, pour atteindre des couches de plus en plus intimes et finir par
                mettre au jour quelque bribe d’un secret troublant. Descendu dans l’abîme des passions
                humaines, il envoyait au monde tranquille en apparence (celui de la surface) des messages
                de victoire décrivant les mystères qu’il avait touchés du doigt. Et le vertige sacré
@@ -234,8 +240,8 @@
             <p>La révolution qui s’est accomplie est de taille&nbsp;: non seulement nous ne considérons
                plus le monde comme notre bien, notre propriété privée, calquée sur nos besoins et
                domesticable, mais par surcroît nous ne croyons plus à cette profondeur. Tandis que
-               les conceptions essentialistes de l’homme voyaient leur ruine, l’idée de <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;condition&nbsp;»</span> remplaçant désormais celle de <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;nature&nbsp;»</span>, la <span class="STDitalic">surface</span> des choses a cessé d’être pour nous le masque de leur cœur, sentiment qui préludait
-               à tous les <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;au-delà&nbsp;»</span> de la métaphysique.</p>
+               les conceptions essentialistes de l’homme voyaient leur ruine, l’idée de «&nbsp;condition&nbsp;» remplaçant désormais celle de «&nbsp;nature&nbsp;», la <span class="STDitalic">surface</span> des choses a cessé d’être pour nous le masque de leur cœur, sentiment qui préludait
+               à tous les «&nbsp;au-delà&nbsp;» de la métaphysique.</p>
             <p>C’est donc tout le langage littéraire qui devrait changer, qui déjà change. Nous constatons,
                de jour en jour, la répugnance croissante des plus conscients devant le mot à caractère
                viscéral, analogique ou incantatoire. Cependant que l’adjectif optique, descriptif,
