--- a/04_livrable/website/punr/punr_ch03.html
+++ b/04_livrable/website/punr/punr_ch03.html
@@ -36,8 +36,14 @@
                         <li><a href="punr_ch13.html">Du réalisme à la réalité</a></li>
                      </ol>
                   </li>
-                  <li><a href="database.html">Illustration de la base de données</a></li>
-                  <li><a href="timeline.html">Chronologie</a></li>
+                  <li style="width:200px; height:100px; padding-top:9px;flex-shrink: 0;">Commentaires thématiques
+                     					
+                     <ol class="chapter_nav" style="list-style:none;">
+                        <li><a href="database.html">Illustration de la base de données</a></li>
+                        <li><a href="timeline.html">Chronologie</a></li>
+                        <li><a href="index.html">Index des notions adverses et des expressions préférées</a></li>
+                     </ol>
+                  </li>
                </ul>
             </nav>
             <div class="legals"><a href="https://github.com/mevel-a/ednitl_m2_memoire" target="blanck" style="grid-column:1;"><img src="img/GitHub-Mark-32px.png"></a><a rel="license" href="http://creativecommons.org/licenses/by/4.0/" target="blanck" style="grid-column:2;"><img alt="Licence Creative Commons" src="https://creativecommons.org/images/chooser/chooser_cc.png"></a><a rel="license" href="http://creativecommons.org/licenses/by/4.0/" target="blanck" style="grid-column:3;"><img alt="Licence Creative Commons" src="https://creativecommons.org/images/chooser/chooser_by.png"></a><a href="files/punr.xml" download="" style="grid-column:3; grid-row:2;"><img src="img/logo_xml.png" alt="XML"></a><button class="darkbutton" onclick="darkmode();" style="grid-column:1; grid-row:2;"><img src="img/sun_icon.png" class="sun"></button></div>
@@ -48,12 +54,12 @@
          <div class="articlenavs">
             <h5>Au sein de cet article</h5><button class="darkbutton" onclick="displayPb();">Afficher les pages</button><h6>Sous-sections</h6>
             <ul id="articlenav">
-               <li><a href="#d1e701">Sur quelques notions périmées</a></li>
+               <li><a href="#d1e725">Sur quelques notions périmées</a></li>
                <ol>
-                  <li><a href="#d1e792">Le personnage</a></li>
-                  <li><a href="#d1e868">L’histoire</a></li>
-                  <li><a href="#d1e973">L’engagement</a></li>
-                  <li><a href="#d1e1108">La forme et le contenu</a></li>
+                  <li><a href="#d1e816">Le personnage</a></li>
+                  <li><a href="#d1e892">L’histoire</a></li>
+                  <li><a href="#d1e997">L’engagement</a></li>
+                  <li><a href="#d1e1132">La forme et le contenu</a></li>
                </ol>
             </ul>
          </div>
@@ -62,7 +68,7 @@
                <summary>Introduction</summary>
             </details>
             <div class="smallgap"></div>
-            <h3 id="d1e701"><span id="page_28" class="STDgray STDsmall pb">[28]</span>Sur quelques notions périmées<br><span class="STDsmall">(1957)</span></h3>
+            <h3 id="d1e725"><span id="page_28" class="STDgray STDsmall pb">[28]</span>Sur quelques notions périmées<br><span class="STDsmall">(1957)</span></h3>
             <p class="first">La critique traditionnelle a son vocabulaire. Bien qu’elle se défende beaucoup de
                porter sur la littérature des jugements systématiques (prétendant, au contraire, aimer
                librement telle ou telle œuvre d’après des critères <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;naturels&nbsp;»</span>&nbsp;: le bon sens, le cœur, etc.), il suffit de lire avec un peu d’attention ses analyses
@@ -89,7 +95,7 @@
                <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;avant-garde&nbsp;»</span>, <span id="page_30" class="STDgray STDsmall pb">[30]</span><span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;laboratoire&nbsp;»</span>, <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;anti-roman&nbsp;»</span>... c’est-à-dire&nbsp;: <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;fermons les yeux et revenons aux saines valeurs de la tradition française&nbsp;»</span>.</p>
             <div class="smallgap"></div>
             <div id="tit8" type="subsection">
-               <h4 id="d1e792">Le personnage</h4>
+               <h4 id="d1e816">Le personnage</h4>
                <div class="smallgap"></div>
                <p>Nous en a-t-on assez parlé, du <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;personnage&nbsp;»</span>&nbsp;! Et ça ne semble, hélas, pas près de finir. Cinquante années de maladie, le constat
                   de son décès enregistré à maintes reprises par les plus sérieux essayistes, rien n’a
@@ -141,7 +147,7 @@
                <div class="smallgap"></div>
             </div>
             <div id="tit9" type="subsection">
-               <h4 id="d1e868">L’histoire</h4>
+               <h4 id="d1e892">L’histoire</h4>
                <div class="smallgap"></div>
                <p>Un roman, pour la plupart des amateurs&nbsp;–&nbsp;et des critiques&nbsp;–, c’est avant tout une
                   <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;histoire&nbsp;»</span>. Un vrai romancier, c’est celui qui sait <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;raconter une histoire&nbsp;»</span>. Le bonheur de conter, qui le porte d’un bout à l’autre de son ouvrage, s’identifie
@@ -237,7 +243,7 @@
                <div class="smallgap"></div>
             </div>
             <div id="tit10" type="subsection">
-               <h4 id="d1e973">L’engagement</h4>
+               <h4 id="d1e997">L’engagement</h4>
                <div class="smallgap"></div>
                <p>Puisque raconter pour distraire est futile et que raconter pour faire croire est devenu
                   suspect, le romancier pense apercevoir une autre voie&nbsp;: raconter pour enseigner. Las
@@ -386,7 +392,7 @@
                <div class="smallgap"></div>
             </div>
             <div id="tit11" type="subsection">
-               <h4 id="d1e1108">La forme et le contenu</h4>
+               <h4 id="d1e1132">La forme et le contenu</h4>
                <div class="smallgap"></div>
                <p>Une chose devrait troubler les partisans du réalisme socialiste, c’est la parfaite
                   ressemblance de leurs arguments, de leur vocabulaire, de leurs valeurs, avec ceux
