--- a/04_livrable/website/punr/punr_ch09.html
+++ b/04_livrable/website/punr/punr_ch09.html
@@ -36,8 +36,14 @@
                         <li><a href="punr_ch13.html">Du réalisme à la réalité</a></li>
                      </ol>
                   </li>
-                  <li><a href="database.html">Illustration de la base de données</a></li>
-                  <li><a href="timeline.html">Chronologie</a></li>
+                  <li style="width:200px; height:100px; padding-top:9px;flex-shrink: 0;">Commentaires thématiques
+                     					
+                     <ol class="chapter_nav" style="list-style:none;">
+                        <li><a href="database.html">Illustration de la base de données</a></li>
+                        <li><a href="timeline.html">Chronologie</a></li>
+                        <li><a href="index.html">Index des notions adverses et des expressions préférées</a></li>
+                     </ol>
+                  </li>
                </ul>
             </nav>
             <div class="legals"><a href="https://github.com/mevel-a/ednitl_m2_memoire" target="blanck" style="grid-column:1;"><img src="img/GitHub-Mark-32px.png"></a><a rel="license" href="http://creativecommons.org/licenses/by/4.0/" target="blanck" style="grid-column:2;"><img alt="Licence Creative Commons" src="https://creativecommons.org/images/chooser/chooser_cc.png"></a><a rel="license" href="http://creativecommons.org/licenses/by/4.0/" target="blanck" style="grid-column:3;"><img alt="Licence Creative Commons" src="https://creativecommons.org/images/chooser/chooser_by.png"></a><a href="files/punr.xml" download="" style="grid-column:3; grid-row:2;"><img src="img/logo_xml.png" alt="XML"></a><button class="darkbutton" onclick="darkmode();" style="grid-column:1; grid-row:2;"><img src="img/sun_icon.png" class="sun"></button></div>
@@ -52,7 +58,7 @@
                <summary>Introduction</summary>
             </details>
             <div class="smallgap"></div>
-            <h3 id="d1e2910">Samuel&nbsp;Beckett, ou la présence sur la scène <br><span class="STDsmall">(1953&nbsp;et&nbsp;1957)</span></h3>
+            <h3 id="d1e2934">Samuel&nbsp;Beckett, ou la présence sur la scène <br><span class="STDsmall">(1953&nbsp;et&nbsp;1957)</span></h3>
             <p class="first">La condition de l’homme, dit  <span class="ref">Heidegger<span class="refinfo">author, <span class="Ref9"></span>, <span class="Axi"></span>.</span></span>, c’est d’être là. Probablement est-ce le théâtre, plus que tout autre mode de représentation
                du réel, qui reproduit le plus naturellement cette situation. Le personnage de théâtre
                <span class="STDitalic">est en scène,</span> c’est sa première qualité&nbsp;: il est <span class="STDitalic">là.</span></p>
