--- a/04_livrable/website/punr/punr_ch11.html
+++ b/04_livrable/website/punr/punr_ch11.html
@@ -36,8 +36,14 @@
                         <li><a href="punr_ch13.html">Du réalisme à la réalité</a></li>
                      </ol>
                   </li>
-                  <li><a href="database.html">Illustration de la base de données</a></li>
-                  <li><a href="timeline.html">Chronologie</a></li>
+                  <li style="width:200px; height:100px; padding-top:9px;flex-shrink: 0;">Commentaires thématiques
+                     					
+                     <ol class="chapter_nav" style="list-style:none;">
+                        <li><a href="database.html">Illustration de la base de données</a></li>
+                        <li><a href="timeline.html">Chronologie</a></li>
+                        <li><a href="index.html">Index des notions adverses et des expressions préférées</a></li>
+                     </ol>
+                  </li>
                </ul>
             </nav>
             <div class="legals"><a href="https://github.com/mevel-a/ednitl_m2_memoire" target="blanck" style="grid-column:1;"><img src="img/GitHub-Mark-32px.png"></a><a rel="license" href="http://creativecommons.org/licenses/by/4.0/" target="blanck" style="grid-column:2;"><img alt="Licence Creative Commons" src="https://creativecommons.org/images/chooser/chooser_cc.png"></a><a rel="license" href="http://creativecommons.org/licenses/by/4.0/" target="blanck" style="grid-column:3;"><img alt="Licence Creative Commons" src="https://creativecommons.org/images/chooser/chooser_by.png"></a><a href="files/punr.xml" download="" style="grid-column:3; grid-row:2;"><img src="img/logo_xml.png" alt="XML"></a><button class="darkbutton" onclick="darkmode();" style="grid-column:1; grid-row:2;"><img src="img/sun_icon.png" class="sun"></button></div>
@@ -48,15 +54,15 @@
          <div class="articlenavs">
             <h5>Au sein de cet article</h5><button class="darkbutton" onclick="displayPb();">Afficher les pages</button><h6>Sous-sections</h6>
             <ul id="articlenav">
-               <li><a href="#d1e3774">Nouveau roman, homme nouveau</a></li>
+               <li><a href="#d1e3798">Nouveau roman, homme nouveau</a></li>
                <ol>
-                  <li><a href="#d1e3795">Le Nouveau&nbsp;Roman n’est pas une théorie, c’est une recherche.</a></li>
-                  <li><a href="#d1e3831">Le Nouveau&nbsp;Roman ne fait que poursuivre une évolution constante du genre romanesque.</a></li>
-                  <li><a href="#d1e3894">Le Nouveau&nbsp;Roman ne s’intéresse qu’à l’homme et à sa situation dans le monde.</a></li>
-                  <li><a href="#d1e3918">Le Nouveau&nbsp;Roman ne vise qu’à une subjectivité totale.</a></li>
-                  <li><a href="#d1e3947">Le Nouveau&nbsp;Roman s’adresse à tous les hommes de bonne foi.</a></li>
-                  <li><a href="#d1e3962">Le Nouveau&nbsp;Roman ne propose pas de signification toute faite.</a></li>
-                  <li><a href="#d1e3980">Le seul engagement possible, pour l’écrivain, c’est la littérature.</a></li>
+                  <li><a href="#d1e3819">Le Nouveau&nbsp;Roman n’est pas une théorie, c’est une recherche.</a></li>
+                  <li><a href="#d1e3855">Le Nouveau&nbsp;Roman ne fait que poursuivre une évolution constante du genre romanesque.</a></li>
+                  <li><a href="#d1e3918">Le Nouveau&nbsp;Roman ne s’intéresse qu’à l’homme et à sa situation dans le monde.</a></li>
+                  <li><a href="#d1e3942">Le Nouveau&nbsp;Roman ne vise qu’à une subjectivité totale.</a></li>
+                  <li><a href="#d1e3971">Le Nouveau&nbsp;Roman s’adresse à tous les hommes de bonne foi.</a></li>
+                  <li><a href="#d1e3986">Le Nouveau&nbsp;Roman ne propose pas de signification toute faite.</a></li>
+                  <li><a href="#d1e4004">Le seul engagement possible, pour l’écrivain, c’est la littérature.</a></li>
                </ol>
             </ul>
          </div>
@@ -65,7 +71,7 @@
                <summary>Introduction</summary>
             </details>
             <div class="smallgap"></div>
-            <h3 id="d1e3774"><span id="page_142" class="STDgray STDsmall pb">[142]</span>Nouveau roman, homme nouveau<br><span class="STDsmall">(1961)</span></h3>
+            <h3 id="d1e3798"><span id="page_142" class="STDgray STDsmall pb">[142]</span>Nouveau roman, homme nouveau<br><span class="STDsmall">(1961)</span></h3>
             <p class="first">On a beaucoup écrit sur le <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;Nouveau Roman&nbsp;»</span> depuis quelques années. Malheureusement, parmi les critiques qu’on lui prodiguait,
                et aussi, souvent, parmi les éloges, il y avait tant de simplifications extrêmes,
                tant d’erreurs, tant de malentendus, qu’une sorte de mythe monstrueux a fini par se
@@ -92,7 +98,7 @@
                qu’il serait plus raisonnable de dire&nbsp;:</p>
             <div class="smallgap"></div>
             <div id="" type="subsection">
-               <h4 id="d1e3795">Le Nouveau&nbsp;Roman n’est pas une théorie, c’est une recherche.</h4>
+               <h4 id="d1e3819">Le Nouveau&nbsp;Roman n’est pas une théorie, c’est une recherche.</h4>
                <div class="smallgap"></div>
                <p>Il n’a donc codifié aucune loi. Ce qui fait qu’il ne s’agit pas d’une école littéraire
                   au sens étroit du terme. Nous sommes les premiers à savoir qu’il y a entre nos œuvres
@@ -120,7 +126,7 @@
                <div class="smallgap"></div>
             </div>
             <div id="" type="subsection">
-               <h4 id="d1e3831">Le Nouveau&nbsp;Roman ne fait que poursuivre une évolution constante du genre romanesque.</h4>
+               <h4 id="d1e3855">Le Nouveau&nbsp;Roman ne fait que poursuivre une évolution constante du genre romanesque.</h4>
                <div class="smallgap"></div>
                <p>L’erreur est de croire que le <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;vrai roman&nbsp;»</span> s’est figé une fois pour toutes, à l’époque balzacienne, en des règles strictes et
                   définitives. Non seulement l’évolution a été considérable depuis le milieu du <span class="STDsc">xix</span><span class="STDexposant">e</span> siècle, mais elle a commencé tout de suite, à l’époque de <span class="ref">Balzac<span class="refinfo">author, <span class="Ref9"></span>, <span class="Axi"></span>.</span></span> lui-même. Celui-ci ne relève-t-il pas déjà de la <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;confusion&nbsp;»</span> dans les descriptions de <span class="STDitalic">La Chartreuse de Parme&nbsp;?</span> Il est certain que la bataille de Waterloo, telle que <span class="ref">Stendhal<span class="refinfo">author, <span class="Ref9"></span>, <span class="Axi"></span>.</span></span> nous la rapporte, n’appartient plus déjà à l’ordre balzacien.</p>
@@ -142,7 +148,7 @@
                   et des vieilles normes.</p>
             </div>
             <div id="" type="subsection">
-               <h4 id="d1e3894">Le Nouveau&nbsp;Roman ne s’intéresse qu’à l’homme et à sa situation dans le monde.</h4>
+               <h4 id="d1e3918">Le Nouveau&nbsp;Roman ne s’intéresse qu’à l’homme et à sa situation dans le monde.</h4>
                <p>Comme il n’y avait pas, dans nos livres, de <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;personnages&nbsp;»</span> au sens traditionnel du mot, on en a conclu, un peu hâtivement, qu’on n’y rencontrait
                   pas d’hommes du tout. C’était bien mal les lire. L’homme y est présent à chaque page,
                   à chaque ligne, à chaque mot. Même si l’on y trouve beaucoup d’objets, et décrits
@@ -167,7 +173,7 @@
                <div class="smallgap"></div>
             </div>
             <div id="" type="subsection">
-               <h4 id="d1e3918">Le Nouveau&nbsp;Roman ne vise qu’à une subjectivité totale.</h4>
+               <h4 id="d1e3942">Le Nouveau&nbsp;Roman ne vise qu’à une subjectivité totale.</h4>
                <div class="smallgap"></div>
                <p>Comme il y avait beaucoup d’objets dans nos livres, et qu’on leur trouvait quelque
                   chose d’insolite, on a bien vite fait un sort au mot <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;objectivité&nbsp;»</span>, prononcé à leur sujet par certains critiques dans un sens pourtant très spécial&nbsp;:
@@ -190,7 +196,7 @@
                   idées toutes faites, en littérature comme dans la vie.</p>
             </div>
             <div id="" type="subsection">
-               <h4 id="d1e3947">Le Nouveau&nbsp;Roman s’adresse à tous les hommes de bonne foi.</h4>
+               <h4 id="d1e3971">Le Nouveau&nbsp;Roman s’adresse à tous les hommes de bonne foi.</h4>
                <div class="smallgap"></div>
                <p>Car il s’agit ici d’expérience vécue, et non des schémas rassurants&nbsp;–&nbsp;et désespérants
                   tout à la fois&nbsp;–&nbsp;qui tentent de limiter les dégâts et d’assigner un ordre conventionnel
@@ -211,7 +217,7 @@
                   de leur existence, les aideront à y voir plus clair.</p>
             </div>
             <div id="" type="subsection">
-               <h4 id="d1e3962">Le Nouveau&nbsp;Roman ne propose pas de signification toute faite.</h4>
+               <h4 id="d1e3986">Le Nouveau&nbsp;Roman ne propose pas de signification toute faite.</h4>
                <div class="smallgap"></div>
                <p>Et l’on arrive à la grande question&nbsp;: notre vie a-t-elle un sens&nbsp;? Quel est-il&nbsp;? Quelle
                   est la place de l’homme sur la terre&nbsp;? On voit tout de suite pourquoi les objets balzaciens
@@ -241,7 +247,7 @@
                <div class="smallgap"></div>
             </div>
             <div id="" type="subsection">
-               <h4 id="d1e3980">Le seul engagement possible, pour l’écrivain, c’est la littérature.</h4>
+               <h4 id="d1e4004">Le seul engagement possible, pour l’écrivain, c’est la littérature.</h4>
                <div class="smallgap"></div>
                <p>Il n’est pas raisonnable, dès lors, de prétendre dans nos romans servir une cause
                   politique, même une cause qui nous paraît juste, même si dans notre vie politique
