--- a/04_livrable/website/punr/punr_ch01.html
+++ b/04_livrable/website/punr/punr_ch01.html
@@ -36,8 +36,14 @@
                         <li><a href="punr_ch13.html">Du réalisme à la réalité</a></li>
                      </ol>
                   </li>
-                  <li><a href="database.html">Illustration de la base de données</a></li>
-                  <li><a href="timeline.html">Chronologie</a></li>
+                  <li style="width:200px; height:100px; padding-top:9px;flex-shrink: 0;">Commentaires thématiques
+                     					
+                     <ol class="chapter_nav" style="list-style:none;">
+                        <li><a href="database.html">Illustration de la base de données</a></li>
+                        <li><a href="timeline.html">Chronologie</a></li>
+                        <li><a href="index.html">Index des notions adverses et des expressions préférées</a></li>
+                     </ol>
+                  </li>
                </ul>
             </nav>
             <div class="legals"><a href="https://github.com/mevel-a/ednitl_m2_memoire" target="blanck" style="grid-column:1;"><img src="img/GitHub-Mark-32px.png"></a><a rel="license" href="http://creativecommons.org/licenses/by/4.0/" target="blanck" style="grid-column:2;"><img alt="Licence Creative Commons" src="https://creativecommons.org/images/chooser/chooser_cc.png"></a><a rel="license" href="http://creativecommons.org/licenses/by/4.0/" target="blanck" style="grid-column:3;"><img alt="Licence Creative Commons" src="https://creativecommons.org/images/chooser/chooser_by.png"></a><a href="files/punr.xml" download="" style="grid-column:3; grid-row:2;"><img src="img/logo_xml.png" alt="XML"></a><button class="darkbutton" onclick="darkmode();" style="grid-column:1; grid-row:2;"><img src="img/sun_icon.png" class="sun"></button></div>
@@ -93,7 +99,7 @@
                écrivain devait garder les yeux fixés.</p>
             <p>Dans les revues, je trouvais souvent plus de sérieux. Mais je ne réussissais pas à
                me satisfaire d’être reconnu, goûté, étudié, par les seuls spécialistes qui m’avaient
-               encouragé dès le début&nbsp;; j’étais persuadé d’écrire pour le <span class="quote" onclick="displayExtract('toDefine','0','3',1);">«&nbsp;grand public&nbsp;»</span>, je souffrais d’être considéré comme un auteur <span class="quote" onclick="displayExtract('toDefine','0','3',1);">«&nbsp;difficile&nbsp;»</span>. Mes étonnements, mes impatiences, étaient probablement d’autant plus vifs que j’ignorais
+               encouragé dès le début&nbsp;; j’étais persuadé d’écrire pour le «&nbsp;grand public&nbsp;», je souffrais d’être considéré comme un auteur «&nbsp;difficile&nbsp;». Mes étonnements, mes impatiences, étaient probablement d’autant plus vifs que j’ignorais
                tout, par ma formation, des milieux littéraires et de leurs habitudes. Je publiais
                donc, dans un journal politico-littéraire à grand tirage (<span class="STDitalic"><span class="ref">L’Express<span class="refinfo">revue, <span class="Ref1">mention</span>, <span class="Axi1">indifférent</span>.</span></span></span>), une série de brefs articles où j’exposais quelques idées qui me semblaient tomber
                sous le sens&nbsp;: disant par exemple que les formes romanesques doivent évoluer pour
@@ -102,8 +108,8 @@
             <p>Le résultat de ces articles ne fut pas ce que j’attendais. Ils firent du bruit, mais
                <span class="ref">on<span class="refinfo">articles, <span class="Ref3">emprunt non déclaré fortement suggéré</span>, <span class="Axi0">blâme</span>.</span></span> les jugea, quasi-unanimement, à la fois simplistes et insensés. Poussé toujours par
                le désir de convaincre, je repris alors en les développant les principaux points en
-               litige, dans un essai un peu plus long qui parut dans <span class="STDitalic"><span class="ref">La Nouvelle Revue française<span class="refinfo">revue, <span class="Ref1">mention</span>, <span class="Axi1">indifférent</span>.</span></span>.</span> L’effet ne fut hélas pas meilleur&nbsp;; et cette récidive&nbsp;–&nbsp;qualifiée de <span class="quote" onclick="displayExtract('toDefine','0','3',1);">«&nbsp;manifeste&nbsp;»</span>&nbsp;–&nbsp;me fit en <span id="page_8" class="STDgray STDsmall pb">[8]</span>outre sacrer théoricien d’une nouvelle <span class="quote" onclick="displayExtract('toDefine','0','3',1);">«&nbsp;école&nbsp;»</span> romanesque, dont on n’attendait évidemment rien de bon, et dans laquelle on s’empressa
-               de ranger, un peu au hasard, tous les écrivains qu’on ne savait pas où mettre. <span class="quote" onclick="displayExtract('toDefine','0','3',1);">«&nbsp;École du regard&nbsp;»</span>, <span class="quote" onclick="displayExtract('toDefine','0','3',1);">«&nbsp;Roman objectif&nbsp;»</span>, <span class="quote" onclick="displayExtract('toDefine','0','3',1);">«&nbsp;École de Minuit&nbsp;»</span>, les appellations variaient&nbsp;; quant aux intentions que l’on me prêtait, elles étaient
+               litige, dans un essai un peu plus long qui parut dans <span class="STDitalic"><span class="ref">La Nouvelle Revue française<span class="refinfo">revue, <span class="Ref1">mention</span>, <span class="Axi1">indifférent</span>.</span></span>.</span> L’effet ne fut hélas pas meilleur&nbsp;; et cette récidive&nbsp;–&nbsp;qualifiée de «&nbsp;manifeste&nbsp;»&nbsp;–&nbsp;me fit en <span id="page_8" class="STDgray STDsmall pb">[8]</span>outre sacrer théoricien d’une nouvelle «&nbsp;école&nbsp;» romanesque, dont on n’attendait évidemment rien de bon, et dans laquelle on s’empressa
+               de ranger, un peu au hasard, tous les écrivains qu’on ne savait pas où mettre. «&nbsp;École du regard&nbsp;», «&nbsp;Roman objectif&nbsp;», «&nbsp;École de Minuit&nbsp;», les appellations variaient&nbsp;; quant aux intentions que l’on me prêtait, elles étaient
                en effet délirantes&nbsp;: chasser l’homme du monde, imposer ma propre écriture aux autres
                romanciers, détruire toute ordonnance dans la composition des livres, etc.</p>
             <p>Je tentais, dans de nouveaux articles, de mettre les choses au point, en éclairant
@@ -145,8 +151,8 @@
                contre les belles-lettres, mais on démontra de surcroît comment il était normal qu’il
                fût à ce point exécrable, puisqu’il s’avouait le produit de la préméditation&nbsp;: son
                auteur&nbsp;–&nbsp;ô scandale&nbsp;!&nbsp;–&nbsp;se permettait d’avoir des opinions sur son propre métier.</p>
-            <p>Ici encore, on constate que les mythes du <span class="STDsc">xix</span><span class="STDexposant">e</span> siècle conservent toute leur puissance&nbsp;: le grand romancier, le <span class="quote" onclick="displayExtract('toDefine','0','3',1);">«&nbsp;génie&nbsp;»</span>, est une sorte de monstre inconscient, irresponsable et fatal, voire légèrement imbécile,
-               de qui partent des <span class="quote" onclick="displayExtract('toDefine','0','3',1);">«&nbsp;messages&nbsp;»</span> que seul le lecteur doit déchiffrer. Tout ce qui risque d’obscurcir le jugement de
+            <p>Ici encore, on constate que les mythes du <span class="STDsc">xix</span><span class="STDexposant">e</span> siècle conservent toute leur puissance&nbsp;: le grand romancier, le «&nbsp;génie&nbsp;», est une sorte de monstre inconscient, irresponsable et fatal, voire légèrement imbécile,
+               de qui partent des «&nbsp;messages&nbsp;» que seul le lecteur doit déchiffrer. Tout ce qui risque d’obscurcir le jugement de
                l’écrivain est plus ou moins admis comme favorisant l’éclosion de son œuvre. L’alcoolisme,
                le malheur, la drogue, la passion mystique, la folie, ont tellement encombré les biographies
                plus ou moins romancées des artistes qu’il semble désormais tout <span id="page_11" class="STDgray STDsmall pb">[11]</span>naturel de voir là des nécessités essentielles de leur triste condition, de voir en
@@ -189,10 +195,10 @@
                de sa création, et en insistant sur l’intérêt que présente pour lui la <span id="page_13" class="STDgray STDsmall pb">[13]</span>conscience de sa propre recherche, nous savons que c’est surtout au niveau de l’écriture
                que cette recherche s’opère, et que tout n’est pas clair à l’instant de la décision.
                Ainsi, après avoir indisposé les critiques en parlant de la littérature dont il rêve,
-               le romancier se sent soudain démuni lorsque ces mêmes critiques lui demandent&nbsp;: <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;Expliquez-nous donc pourquoi vous avez écrit ce livre, ce qu’il signifie, ce que
-                  vous vouliez faire, dans quelle intention vous avez employé ce mot, construit cette
-                  phrase de telle manière&nbsp;?&nbsp;»</span></p>
-            <p>Devant de pareilles questions, on dirait que son <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;intelligence&nbsp;»</span> ne lui est plus d’aucun secours. Ce qu’il a voulu faire, c’est seulement ce livre
+               le romancier se sent soudain démuni lorsque ces mêmes critiques lui demandent&nbsp;: «&nbsp;Expliquez-nous donc pourquoi vous avez écrit ce livre, ce qu’il signifie, ce que
+               vous vouliez faire, dans quelle intention vous avez employé ce mot, construit cette
+               phrase de telle manière&nbsp;?&nbsp;»</p>
+            <p>Devant de pareilles questions, on dirait que son «&nbsp;intelligence&nbsp;» ne lui est plus d’aucun secours. Ce qu’il a voulu faire, c’est seulement ce livre
                lui-même. Cela ne veut pas dire qu’il en soit satisfait toujours&nbsp;; mais l’œuvre demeure,
                dans tous les cas, la meilleure et la seule expression possible de son projet. S’il
                avait eu la faculté d’en fournir une définition plus simple, ou de ramener ses deux
@@ -206,17 +212,17 @@
                de refuser tel adjectif, de construire ce paragraphe de telle façon. Il met tout son
                soin à la lente recherche du mot exact et de son juste emplacement. <span id="page_14" class="STDgray STDsmall pb">[14]</span>Mais de cette nécessité il ne peut produire aucune preuve (sinon, parfois, après coup).
                Il supplie qu’on le croie, qu’on lui fasse confiance. Et lorsqu’on lui demande pourquoi
-               il a écrit son livre, il n’a qu’une réponse&nbsp;: <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;C’est pour essayer de savoir pourquoi j’avais envie de l’écrire.&nbsp;»</span></p>
+               il a écrit son livre, il n’a qu’une réponse&nbsp;: «&nbsp;C’est pour essayer de savoir pourquoi
+               j’avais envie de l’écrire.&nbsp;»</p>
             <div class="smallgap"></div>
             <p>Quant à dire où va le roman, personne évidemment ne peut le faire avec certitude.
                Il est d’ailleurs probable que différentes voies continueront d’exister pour lui parallèlement.
                Pourtant il semble que l’une d’entre elles se dessine déjà avec plus de netteté que
-               les autres. De <span class="ref">Flaubert<span class="refinfo">author, <span class="Ref9"></span>, <span class="Axi"></span>.</span></span> à <span class="ref">Kafka<span class="refinfo">author, <span class="Ref9"></span>, <span class="Axi"></span>.</span></span>, une filiation s’impose à l’esprit, qui appelle un devenir. Cette passion de décrire,
+               les autres. De <span class="ref">Flaubert<span class="refinfo">author, <span class="Ref1">mention</span>, <span class="Axi2">éloge</span>.</span></span> à <span class="ref">Kafka<span class="refinfo">author, <span class="Ref1">mention</span>, <span class="Axi2">éloge</span>.</span></span>, une filiation s’impose à l’esprit, qui appelle un devenir. Cette passion de décrire,
                qui tous deux les anime, c’est bien elle que l’on retrouve dans le nouveau roman d’aujourd’hui.
-               Au-delà du naturalisme de l’un et de l’onirisme métaphysique de l’autre, se dessinent
-               les premiers éléments d’une écriture réaliste d’un genre inconnu, qui est en train
-               maintenant de voir le jour. C’est ce nouveau réalisme dont le présent recueil tente
-               de préciser quelques contours.</p>
+               Au-delà du <span class="ref">naturalisme<span class="refinfo">courant_artistique, <span class="Ref1">mention</span>, <span class="Axi0">blâme</span>.</span></span> de l’un et de <span class="ref">l’onirisme métaphysique<span class="refinfo">courant_artistique, <span class="Ref3">emprunt non déclaré fortement suggéré</span>, <span class="Axi0">blâme</span>.</span></span> de l’autre, se dessinent les premiers éléments d’une écriture réaliste d’un genre
+               inconnu, qui est en train maintenant de voir le jour. C’est ce nouveau réalisme dont
+               le présent recueil tente de préciser quelques contours.</p>
          </article>
          <section class="extract_section">
             <div id="unknown_0" class="extractHide">
