--- a/04_livrable/website/punr/punr_ch04.html
+++ b/04_livrable/website/punr/punr_ch04.html
@@ -36,8 +36,14 @@
                         <li><a href="punr_ch13.html">Du réalisme à la réalité</a></li>
                      </ol>
                   </li>
-                  <li><a href="database.html">Illustration de la base de données</a></li>
-                  <li><a href="timeline.html">Chronologie</a></li>
+                  <li style="width:200px; height:100px; padding-top:9px;flex-shrink: 0;">Commentaires thématiques
+                     					
+                     <ol class="chapter_nav" style="list-style:none;">
+                        <li><a href="database.html">Illustration de la base de données</a></li>
+                        <li><a href="timeline.html">Chronologie</a></li>
+                        <li><a href="index.html">Index des notions adverses et des expressions préférées</a></li>
+                     </ol>
+                  </li>
                </ul>
             </nav>
             <div class="legals"><a href="https://github.com/mevel-a/ednitl_m2_memoire" target="blanck" style="grid-column:1;"><img src="img/GitHub-Mark-32px.png"></a><a rel="license" href="http://creativecommons.org/licenses/by/4.0/" target="blanck" style="grid-column:2;"><img alt="Licence Creative Commons" src="https://creativecommons.org/images/chooser/chooser_cc.png"></a><a rel="license" href="http://creativecommons.org/licenses/by/4.0/" target="blanck" style="grid-column:3;"><img alt="Licence Creative Commons" src="https://creativecommons.org/images/chooser/chooser_by.png"></a><a href="files/punr.xml" download="" style="grid-column:3; grid-row:2;"><img src="img/logo_xml.png" alt="XML"></a><button class="darkbutton" onclick="darkmode();" style="grid-column:1; grid-row:2;"><img src="img/sun_icon.png" class="sun"></button></div>
@@ -52,7 +58,7 @@
                <summary>Introduction</summary>
             </details>
             <div class="smallgap"></div>
-            <h3 id="d1e1242"><span id="page_54" class="STDgray STDsmall pb">[54]</span><span class="ref">Nature<span class="refinfo">concept, <span class="Ref9"></span>, <span class="Axi"></span>.</span></span>, humanisme, tragédie<br><span class="STDsmall">(1958)</span></h3>
+            <h3 id="d1e1266"><span id="page_54" class="STDgray STDsmall pb">[54]</span><span class="ref">Nature<span class="refinfo">concept, <span class="Ref9"></span>, <span class="Axi"></span>.</span></span>, humanisme, tragédie<br><span class="STDsmall">(1958)</span></h3>
             <div class="epigraph" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">
                <p>La tragédie n’est qu’un moyen de recueillir le malheur humain, de le subsumer, donc
                   de le justifier sous la forme d’une nécessité, d’une sagesse ou d’une purification&nbsp;:
